--- a/app/views/certificates.html
+++ b/app/views/certificates.html
@@ -60,68 +60,18 @@
 <div id="certificates" style="border: solid 1px black;">
   <h4>CERTIFICATES</h4>
 
-  <div id="certificatesContainer">
-    <div class="certificatesItem">
-      <img ng-src="http://lorempixel.com/80/80/" alt="Certificate"/>
+  <div ng-if="certificates === null || certificates.length === 0">
+    <p>
+      There are no certificates achieved yet.
+    </p>
+  </div>
+
+  <div id="certificatesContainer" ng-if="certificates !== null">
+    <div class="certificatesItem" ng-repeat="certificate in certificates">
+      <img ng-src="{{certificate.image}}" alt="Certificate"/>
 
       <p>
-        Prince2 Foundation
-      </p>
-    </div>
-    <div class="certificatesItem">
-      <img ng-src="http://lorempixel.com/80/80/" alt="Certificate"/>
-
-      <p>
-        Programming in HTML5, JavaScript, CSS3
-      </p>
-    </div>
-    <div class="certificatesItem">
-      <img ng-src="http://lorempixel.com/80/80/" alt="Certificate"/>
-
-      <p>
-        Developing ASP.NET MVC web applications
-      </p>
-    </div>
-    <div class="certificatesItem">
-      <img ng-src="http://lorempixel.com/80/80/" alt="Certificate"/>
-
-      <p>
-        Prince2 Foundation
-      </p>
-    </div>
-    <div class="certificatesItem">
-      <img ng-src="http://lorempixel.com/80/80/" alt="Certificate"/>
-
-      <p>
-        Programming in HTML5, JavaScript, CSS3
-      </p>
-    </div>
-    <div class="certificatesItem">
-      <img ng-src="http://lorempixel.com/80/80/" alt="Certificate"/>
-
-      <p>
-        Developing ASP.NET MVC web applications
-      </p>
-    </div>
-    <div class="certificatesItem">
-      <img ng-src="http://lorempixel.com/80/80/" alt="Certificate"/>
-
-      <p>
-        Prince2 Foundation
-      </p>
-    </div>
-    <div class="certificatesItem">
-      <img ng-src="http://lorempixel.com/80/80/" alt="Certificate"/>
-
-      <p>
-        Programming in HTML5, JavaScript, CSS3
-      </p>
-    </div>
-    <div class="certificatesItem">
-      <img ng-src="http://lorempixel.com/80/80/" alt="Certificate"/>
-
-      <p>
-        Developing ASP.NET MVC web applications
+        {{certificate.description}}
       </p>
     </div>
   </div>
