Show notification if employee doesn't have any interests

--- a/app/views/interests.html
+++ b/app/views/interests.html
@@ -39,57 +39,19 @@
 
   }
 </style>
+
 <div id="interests" style="border: solid 1px black;">
   <h4>INTERESTS</h4>
 
-  <div id="interestsContainer">
-    <div class="interestsItem">
-      Microsoft
-    </div>
-    <div class="interestsItem">
-      .NET
-    </div>
-    <div class="interestsItem">
-      Sales
-    </div>
-    <div class="interestsItem">
-      MVC
-    </div>
-    <div class="interestsItem">
-      Fishing
-    </div>
-    <div class="interestsItem">
-      CSS
-    </div>
-    <div class="interestsItem">
-      Soccer
-    </div>
-    <div class="interestsItem">
-      HTML5
-    </div>
-    <div class="interestsItem">
-      Java
-    </div>
-    <div class="interestsItem">
-      jQuery
-    </div>
-    <div class="interestsItem">
-      SQL
-    </div>
-    <div class="interestsItem">
-      MatLab
-    </div>
-    <div class="interestsItem">
-      Marketing
-    </div>
-    <div class="interestsItem">
-      Eclipse
-    </div>
-    <div class="interestsItem">
-      Agile
-    </div>
-    <div class="interestsItem">
-      SOAPUI
+  <div ng-if="interests === null || interests.length === 0">
+    <p>
+      There are no interests yet.
+    </p>
+  </div>
+
+  <div id="interestsContainer" ng-if="interests !== null || interests.length !== 0">
+    <div class="interestsItem" ng-repeat="interest in interests">
+      {{interest.description}}
     </div>
   </div>
 </div>
