--- a/app/views/certificates.html
+++ b/app/views/certificates.html
@@ -66,7 +66,7 @@
     </p>
   </div>
 
-  <div id="certificatesContainer" ng-if="certificates !== null || certificates.length !== 0">
+  <div id="certificatesContainer" ng-if="certificates !== null && certificates.length !== 0">
     <div class="certificatesItem" ng-repeat="certificate in certificates">
       <img ng-src="{{certificate.image}}" alt="Certificate"/>
 
