update login page to new design

--- a/app/views/unit.html
+++ b/app/views/unit.html
@@ -8,6 +8,7 @@
     color: #E98300;
   }
 
+
 </style>
 
 <div ng-cloak>
@@ -16,8 +17,8 @@
       <md-tab class="md-tab-item" label="PEOPLE">
         <md-content class="md-padding">
 
-          <div class="inactive">
-            <inactiveusers></inactiveusers>
+          <div inactiveusers>
+
           </div>
 
         </md-content>
