Added experience directive (mock-up)

--- a/app/views/about.html
+++ b/app/views/about.html
@@ -18,6 +18,7 @@
           <certificates></certificates>
           <interests></interests>
           <daily-route></daily-route>
+          <experience></experience>
 
         </md-content>
       </md-tab>
