rename of the skillcompetence directive

--- a/app/views/about.html
+++ b/app/views/about.html
@@ -28,7 +28,7 @@
       </md-tab>
       <md-tab label="LEARNING">
         <md-content class="md-padding">
-          <skillset></skillset>
+          <skillcompetence></skillcompetence>
           <learning></learning>
         </md-content>
       </md-tab>
