Added activity directive (mock-up)

--- a/app/views/about.html
+++ b/app/views/about.html
@@ -35,7 +35,7 @@
       </md-tab>
       <md-tab label="ACTIVITY">
         <md-content class="md-padding">
-
+          <activity></activity>
         </md-content>
       </md-tab>
     </md-tabs>
