Added skillset feature

--- a/app/views/about.html
+++ b/app/views/about.html
@@ -14,6 +14,7 @@
       <md-tab class="md-tab-item" label="ABOUT">
         <md-content class="md-padding">
 
+          <skillset></skillset>
           <a-little-about-me></a-little-about-me>
           <certificates></certificates>
           <interests></interests>
