--- a/app/views/about.html
+++ b/app/views/about.html
@@ -25,7 +25,7 @@
       </md-tab>
       <md-tab label="POINTS">
         <md-content class="md-padding">
-
+          <endorsements></endorsements>
         </md-content>
       </md-tab>
       <md-tab label="LEARNING">
