Updated to backend & change of login now only with username, changed id to username as identifier & updated restangular for better performance

--- a/app/views/skillCompetences.html
+++ b/app/views/skillCompetences.html
@@ -1,5 +1,6 @@
 <div>
   <h4>Skill competences</h4>
+
   <div class="row">
     <div class="col-lg-6">
       <table class="table table-hover table-striped table-bordered">
@@ -10,7 +11,7 @@
         </tr>
         </thead>
         <tbody>
-        <tr ng-repeat="skillCompetence in skillCompetences | filter:search" ng-click="setSelected(skill)">
+        <tr ng-repeat="skillCompetence in skillCompetences" ng-click="setSelected(skill)">
           <td>{{skillCompetence.skill.name}}</td>
           <td>{{skillCompetence.competenceLevel}}</td>
           <td ng-click="remove(skillCompetence._links.self.href)">Delete</td>
@@ -20,9 +21,12 @@
             <td>
               <input id="skill" class="form-control"
                      ng-model="skillCompetence.skill" typeahead-no-results="noResults"
-                     typeahead="skill as skill.name for skill in skills | filter:$viewValue | limitTo:8"
+                     typeahead="skill as skill.name for skill in skills"
                      placeholder="Skill"/>
-              <div ng-if="!skillCompetence.skill._links && skillCompetence.skill" class="alert alert-danger">Select a skill from the list.</div>
+
+              <div ng-if="!skillCompetence.skill._links && skillCompetence.skill" class="alert alert-danger">Select a
+                skill from the list.
+              </div>
             </td>
             <td>
               <input name="competenceLevel" ng-model="skillCompetence.competenceLevel" placeholder="Competence Level"
