--- a/app/views/panel.html
+++ b/app/views/panel.html
@@ -56,7 +56,7 @@
         </md-button>
       </td>
       <td>
-        <md-button class="md-icon-button md-accent" ng-click="joinUnit(person._links.self.href)">
+        <md-button class="md-icon-button md-accent" ng-click="joinUnit(person.username)">
           <ng-md-icon icon="person_add"></ng-md-icon>
         </md-button>
 
