Directive added: Worked with person

--- a/app/views/about.html
+++ b/app/views/about.html
@@ -20,6 +20,7 @@
           <interests></interests>
           <daily-route></daily-route>
           <experience></experience>
+          <worked-with-person></worked-with-person>
 
         </md-content>
       </md-tab>
