Directive added: Interesting people

--- a/app/views/about.html
+++ b/app/views/about.html
@@ -21,6 +21,7 @@
           <daily-route></daily-route>
           <experience></experience>
           <worked-with-person></worked-with-person>
+          <interesting-people></interesting-people>
 
         </md-content>
       </md-tab>
