Added directive: Interesting groups

--- a/src/app/persons/about.html
+++ b/src/app/persons/about.html
@@ -39,6 +39,7 @@
       <md-tab label="ACTIVITY">
         <md-content class="md-padding">
           <activity></activity>
+          <interesting-groups></interesting-groups>
         </md-content>
       </md-tab>
     </md-tabs>
